force-app/main/default/objects/AI_Builder_Message__c/AI_Builder_Message__c.object-meta.xml
<CustomObject>
    <description>Chat messages within a Copado Builder session.</description>
    <label>AI Builder Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Builder Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>